locked navigation bar fixed relative space problem fixed no-scroll problem adjusted spacing between objects changed positioning properties changed text displays shifted objects properties etc

--- a/solarSystem/G4_Greg_Milestone_3/Style_Sheet/forumstyle.css
+++ b/solarSystem/G4_Greg_Milestone_3/Style_Sheet/forumstyle.css
@@ -15,6 +15,7 @@ body {
     background-color:rgba(147, 139, 139, 0.50);
     color:LightGrey;
     text-align:center;
+    padding-bottom:1%;
     position:fixed;
     top:0%;
     left:0%;
@@ -24,8 +25,9 @@ body {
 }
 
 #pageSum {  
-    position:fixed;
-    top:25%;
+    margin-top:5%;
+    position:absolute;
+    left:0%;
     height:100%;
     width:100%;
 }
@@ -33,7 +35,8 @@ body {
 
 #boxMaster {
     position:relative;
-    left:20%;
+    margin-top:2%;
+    margin-left:22%;
 }
 
 #welcomeMessage {
@@ -43,9 +46,7 @@ body {
     font-style:oblique;
     padding-top:2%;
     padding-bottom:2%;
-    position:fixed;
-    top:10%;
-    left:0%;
+    position:relative;
     width:100%;
 }
 
@@ -64,7 +65,7 @@ p {
     color: #bab9b9;
     margin-top:.5%;
     margin-bottom:.5%;
-    width:60%;
+    width:70%;
     height:30%;
 }
 
@@ -76,7 +77,7 @@ p {
     color: #bab9b9;
     margin-top:.5%;
     margin-bottom:.5%;
-    width:60%;
+    width:70%;
     height:30%;
 }
 
@@ -88,7 +89,7 @@ p {
     color: #bab9b9;
     margin-top:.5%;
     margin-bottom:.5%;
-    width:60%;
+    width:70%;
     height:30%;
 }
 
@@ -100,7 +101,7 @@ p {
     color: #bab9b9;
     margin-top:.5%;
     margin-bottom:.5%;
-    width:60%;
+    width:70%;
     height:30%;
 }
 
@@ -112,7 +113,19 @@ p {
     color: #bab9b9;
     margin-top:.5%;
     margin-bottom:.5%;
-    width:60%;
+    width:70%;
+    height:30%;
+}
+
+#boxChild6 {
+    border:3px solid LightGrey;
+    border-left:10px solid Grey;
+    border-right:10px solid Grey;
+    box-shadow:1px 5px 15px #888888;
+    color: #bab9b9;
+    margin-top:.5%;
+    margin-bottom:.5%;
+    width:70%;
     height:30%;
 }
 
@@ -123,19 +136,18 @@ p {
     font-size:83%;
     text-align:center;
     position:absolute;
-    left:.5%;
+    left:2%;
     width:18%;
     z-index:1;
 }
 
-footer {
+#footer {
     color:#bab9b9;
     font-size:80%;
     text-align:center;
-    margin-top:2%;
-    position:fixed;
-    left:0%;
-    bottom:1%;
+    margin-top:5%;
+    position:relative; 
+    bottom:0%;
     width:100%;
 }
 
